--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -57,6 +57,85 @@
 <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "Case and Stand for 9.7-inch iPad Pro";amzn_assoc_default_category = "All";amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";amzn_assoc_title = "Shop Related Products";amzn_assoc_rows = "5";amzn_assoc_design = "text_links";</script>
     <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z4WETL"><img src="https://images-na.ssl-images-amazon.com/images/I/6182S7MYC2L._SX569_.jpg" alt="Echo Dot" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z4WETL">Echo Dot (3rd Gen) - Smart speaker with Alexa - Charcoal</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z4WETL">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z3SFqy"><img src="https://images-na.ssl-images-amazon.com/images/I/51CgKGfMelL._SY355_.jpg" alt="Fire TV Stick 4K with Alexa Voice Remote" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z3SFqy">Fire TV Stick 4K with Alexa Voice Remote, streaming media player</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Z3SFqy">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZfDZzL"><img src="https://images-na.ssl-images-amazon.com/images/I/51Moh2cRHcL._SX326_BO1,204,203,200_.jpg" alt="Unbroken" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZfDZzL">Unbroken: A World War II Story of Survival, Resilience, and Redemption Hardcover – November 16, 2010</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.95</span><span class="ori_price">$28.00</span></address>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZfDZzL">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="249.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KL5Cg1"><img src="https://images-na.ssl-images-amazon.com/images/I/61dxSs7g7VL._SX679_.jpg" alt="Toshiba 49 inches 1080p Smart LED TV" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KL5Cg1">Toshiba 49 inches 1080p Smart LED TV 49LF421U19 (2018)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$249.99</span><span class="ori_price">$330.00</span></address>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KL5Cg1">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="10.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31USb36"><img src="https://images-na.ssl-images-amazon.com/images/I/61sPgJM6fpL._SX679_.jpg" alt="iClever USB Wall Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31USb36">iClever USB Wall Charger, BoostCube 24W Dual Port Charger with SmartID Technology and Foldable Plug, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$10.98</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31USb36">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="36" data-price="285.95">
   <div class="image_box">
