--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -14,6 +14,7 @@
 .gadgets .card_wrap .card-body .btn{margin:10px 0;display:inline-block;}
 .gadgets .card_wrap .card-body .btn>em{float:left;font-size:17px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:20px;}
 .gadgets .card_wrap .card-body .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:20px;}
+.gadgets .card_wrap .card-body .btn .learnmore{background:#000;color:#fff;padding:3px 20px;}
 .gadgets .card_wrap .card-body .admin{margin-top:-15px;}
 .gadgets .card_wrap .card-body .admin>em>a{text-decoration:none;color:#fff;}
 .gadgets .card_wrap .card-header img{display:block;width:100%;margin:0 auto;border-radius:10px;}
