--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -19,8 +19,8 @@
           <a href="/most_reviews/coffee_gadgets" class="overlay-container" data-overlay-text="mouse"><img src="https://images.unsplash.com/photo-1527864550417-7fd91fc51a46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image capture goes here 03" class="overlay-img" /><p>BOTTLES</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["home","PRODUCT_TITLE"]'>
-          <a href="#" class="overlay-container" data-overlay-text="Brunch"><img src="https://trungk18.github.io/img/image-grid/img-brunch.jpg" alt="Image capture goes here 04" class="overlay-img" /></a>
+        <div class="filter-node most_box" data-filter='["home","gaming mouse"]'>
+          <a href="#" class="overlay-container" data-overlay-text="Gaming Mouse"><img src="https://trungk18.github.io/img/image-grid/img-brunch.jpg" alt="Image capture goes here 04" class="overlay-img" /><p>Gaming mouse</p></a>
         </div>
 
         <div class="filter-node most_box" data-filter='["tech","PRODUCT_TITLE"]'>
