--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -53,9 +53,15 @@
                   <!-- <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4> -->
                   <h4><%= link_to gadget.gg_title, gadget %></h4>
                   <!-- <p><%= gadget.gg_intro %></p> -->
+
                   <div class="btn clearfix">
+                    <% if gadget.gg_option_03.present? %>
+                     <a class="learnmore" target="_blank" href="<%= gadget.gg_url %>">Learn More</a>
+                    <% else %>
                     <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
+                    <% end %>
                   </div>
+
                 <% end %>
                 <% if can? :update, gadget %>
                   <div class="btn clearfix admin">
