--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,7 +48,111 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
-
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KNeH8k"><img src="https://m.media-amazon.com/images/I/41OzNICh2fL._SR400,400_.jpg" alt="COOAU 4MP HD Home Security Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KNeH8k">COOAU 4MP HD Home Security Camera, AI WiFi IP Pet Camera Wireless Baby Monitor with Face, Sound and Motion Detection,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.99</span><span class="ori_price">$79.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50TPA5H5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $79.99</strong> with promo code: <strong class="m_codes">50TPA5H5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 01:00 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KNeH8k">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HhcEab"><img src="https://m.media-amazon.com/images/I/61-QQw-3cBL._SR400,400_.jpg" alt="SIMPLE DRINK Stainless Steel Insulated Water Bottle" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HhcEab">SIMPLE DRINK Stainless Steel Insulated Water Bottle - Cold 24 Hrs & Hot 12 Hrs | Reusable Wide Mouth Metal Flask ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">50CF53QZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50CF53QZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HhcEab">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33TT1yD"><img src="https://m.media-amazon.com/images/I/91KL0IAPhhL._SR400,400_.jpg" alt="Travel Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33TT1yD">Travel Backpack, Veckle Anti Theft Multifunction Duffel Bag Lightweight Backpack Water Resistant Laptop Backpack...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">45NRDFB3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $39.99</strong> with promo code: <strong class="m_codes">45NRDFB3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33TT1yD">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="6.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Hk51ju"><img src="https://m.media-amazon.com/images/I/71xrsVLXdeL._SR400,400_.jpg" alt="BABI BEAR Makeup Brushes" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Hk51ju">BABI BEAR Makeup Brushes 10 PCs Makeup Brushes Set Premium Synthetic Foundation Powder Fan Concealers Eye Shadows Makeup Brush...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.50</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">509CGFVG</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $12.99</strong> with promo code: <strong class="m_codes">509CGFVG</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Hk51ju">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zkucxL"><img src="https://m.media-amazon.com/images/I/61vAvFthzsL._SR400,400_.jpg" alt="NOOFORMER Mini Travel Sun&rain Umbrella" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zkucxL">NOOFORMER Mini Travel Sun&rain Umbrella - Light Compact Parasol with 95% UV Protection for Men Women Multiple Colors</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.99</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ZH9NY8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $14.99</strong> with promo code: <strong class="m_codes">40ZH9NY8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zkucxL">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33KmNWC"><img src="https://m.media-amazon.com/images/I/719RDw6vjKL._SR400,400_.jpg" alt="zociko ABS Stimulator Muscle Toner" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33KmNWC">zociko ABS Stimulator Muscle Toner, Abdominal Toning Belt Muscle Smart EMS Body Trainer, USB Rechargeable LCD Display 6 Modes & 9 Levels</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50UOY37Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50UOY37Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33KmNWC">Use Code at Amazon</a></div>
+</div>
+  
 <div class="card clearfix" data-score="50" data-price="11.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Z6qNlD"><img src="https://images-na.ssl-images-amazon.com/images/I/71Kiz%2BRzZBL._SX679_.jpg" alt="USB C Wall Charger with Quick Charge 3.0" /></a>
