--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -465,13 +465,15 @@
 
 .most_box{float:left;width:18%;margin:1%;overflow:hidden;}
 .most_box a{text-transform:uppercase;}
+.most_box a:hover p{color:rgb(0,205,0,0.7);}
 .most_box img{width:100%;height:170px;object-fit:cover;-webkit-filter:grayscale(85%);filter:gray;border-radius:10px;}
+.most_box img:hover{-webkit-filter:grayscale(0);}
 .most_box p{font-size:20px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:#fff;font-weight:bold;text-align:center;}
 .most_box .overlay-container{display:block;position:relative;}
-.most_box .overlay-container::before{font-weight:bold;content:attr(data-overlay-text);/*font:1em/1.5em 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/position:absolute;z-index:1;/*On top of parent*/top:30%;width:100%;height:40px;font-size:20px;text-align:center;color:#fff;line-height:40px;background:rgba(0, 0, 0, 0.8);opacity:0;-moz-transform:translateY(0);-ms-transform:translateY(0);-o-transform:translateY(0);-webkit-transform:translateY(0);transform:translateY(0);-moz-transition:all 0.3s;-o-transition:all 0.3s;-webkit-transition:all 0.3s;transition:all 0.3s;}
-.most_box .overlay-container:hover::before{opacity:1;-moz-transform:translateY(20px);-ms-transform:translateY(20px);-o-transform:translateY(20px);-webkit-transform:translateY(20px);transform:translateY(20px);}
-.most_box .overlay-container .overlay-img{-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);-webkit-transform:scale(1);transform:scale(1);-moz-transition:all 0.3s;-o-transition:all 0.3s;-webkit-transition:all 0.3s;transition:all 0.3s;}
-.most_box .overlay-container:hover .overlay-img{-moz-transform:scale(1.2);-ms-transform:scale(1.2);-o-transform:scale(1.2);-webkit-transform:scale(1.2);transform:scale(1.2);-webkit-filter:grayscale(0%);filter:none;}
+/*.most_box .overlay-container::before{font-weight:bold;content:attr(data-overlay-text);/*font:1em/1.5em 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;position:absolute;z-index:1;/*On top of parent*/top:30%;width:100%;height:40px;font-size:20px;text-align:center;color:#fff;line-height:40px;background:rgba(0, 0, 0, 0.8);opacity:0;-moz-transform:translateY(0);-ms-transform:translateY(0);-o-transform:translateY(0);-webkit-transform:translateY(0);transform:translateY(0);-moz-transition:all 0.3s;-o-transition:all 0.3s;-webkit-transition:all 0.3s;transition:all 0.3s;}*/*/
+/*.most_box .overlay-container:hover::before{opacity:1;-moz-transform:translateY(20px);-ms-transform:translateY(20px);-o-transform:translateY(20px);-webkit-transform:translateY(20px);transform:translateY(20px);}*/
+/*.most_box .overlay-container .overlay-img{-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);-webkit-transform:scale(1);transform:scale(1);-moz-transition:all 0.3s;-o-transition:all 0.3s;-webkit-transition:all 0.3s;transition:all 0.3s;}*/
+/*.most_box .overlay-container:hover .overlay-img{-moz-transform:scale(1.2);-ms-transform:scale(1.2);-o-transform:scale(1.2);-webkit-transform:scale(1.2);transform:scale(1.2);-webkit-filter:grayscale(0%);filter:none;}*/
 .most_box .overlay-container:hover p{display:none;}
 @media screen and (max-width:640px){
   .most_review_sub{margin-top:85px;}
