--- a/app/views/deals/_navbar_mostreviwed_index.html.erb
+++ b/app/views/deals/_navbar_mostreviwed_index.html.erb
@@ -7,6 +7,8 @@
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
       <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
       <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
+      <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button>
+      <!-- <button class="filter-button btn btn-md rev_index last_menu" data-filter="outdoor">etc...</button> -->
 <!--  <button class="filter-button btn btn-md rev_index" data-filter="5k">5,000 +</button>
       <button class="filter-button btn btn-md rev_index" data-filter="1k">1,000 +</button> -->
       <!-- <ul class="dropmenu ilter-button btn">
@@ -23,9 +25,10 @@
   
   <div class="editor_mobile">
     <div class="filter-search guide_controll">
-      <button class="filter-button btn btn-md btn-primary all" data-filter="*">All</button>
-      <button class="filter-button btn btn-md white-text" data-filter="30k">30,000 +</button>
-      <button class="filter-button btn btn-md" data-filter="20k">20,000 +</button>
+      <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
+      <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
+      <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
+      <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
       
       <ul class="dropmenu filter-button btn more_btn">
         <li class="dir"><a href="#">More</a>
