--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -465,7 +465,7 @@
 
 .most_box{float:left;width:18%;margin:1%;overflow:hidden;}
 .most_box a{text-transform:uppercase;}
-.most_box a:hover p{color:rgb(0,205,0,0.7);}
+.most_box a:hover p{color:rgba(0,205,0,0.7);}
 .most_box img{width:100%;height:170px;object-fit:cover;-webkit-filter:grayscale(85%);filter:gray;border-radius:10px;}
 .most_box img:hover{-webkit-filter:grayscale(0);}
 .most_box p{font-size:20px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:#fff;font-weight:bold;text-align:center;}
