--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -59,6 +59,26 @@
           <a target="_blank" href="https://amzn.to/2ZltYFk" class="overlay-container" data-overlay-text="Robotic Vacuums"><img src="https://images.unsplash.com/photo-1558317374-067fb5f30001?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Robotic Vacuums" class="overlay-img" /><p>Robotic Vacuums</p></a>
         </div>
 
+        <div class="filter-node most_box" data-filter='["home","Irons & Steamers"]'>
+          <a target="_blank" href="https://amzn.to/2NqbNYY" class="overlay-container" data-overlay-text="Irons & Steamers"><img src="https://images.unsplash.com/photo-1489274495757-95c7c837b101?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Irons & Steamers" class="overlay-img" /><p>Irons & Steamers</p></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["outdoor","Travel Steamers"]'>
+          <a target="_blank" href="https://amzn.to/2KR1hIy" class="overlay-container" data-overlay-text="Travel Steamers"><img src="https://images-na.ssl-images-amazon.com/images/I/91WaMD3kKYL._SX522_.jpg" alt="Travel Steamers" class="overlay-img" /><p>Travel Steamers</p></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["outdoor","Travel Mugs"]'>
+          <a target="_blank" href="https://amzn.to/2Hkw0vs" class="overlay-container" data-overlay-text="Travel Mugs"><img src="https://images.unsplash.com/photo-1467949576168-6ce8e2df4e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Travel Mugs" class="overlay-img" /><p>Travel Mugs</p></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["outdoor","Thermoses"]'>
+          <a target="_blank" href="https://amzn.to/2HlaHcT" class="overlay-container" data-overlay-text="Thermoses"><img src="https://images.unsplash.com/photo-1541346592492-55018cecdfe0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Thermoses" class="overlay-img" /><p>Thermoses</p></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["home","Security Camera"]'>
+          <a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera"><img src="https://images.unsplash.com/photo-1496368077930-c1e31b4e5b44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Security Camera" class="overlay-img" /><p>Security Camera</p></a>
+        </div>
+
         <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
           <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
         </div>
