--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -79,20 +79,20 @@
           <a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera"><img src="https://images.unsplash.com/photo-1496368077930-c1e31b4e5b44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Security Camera" class="overlay-img" /><p>Security Camera</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-          <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+        <div class="filter-node most_box" data-filter='["tech","Gaming Mice"]'>
+          <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mice"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mice" class="overlay-img" /><p>Gaming Mice</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-          <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+        <div class="filter-node most_box" data-filter='["tech","Gaming Keyboards"]'>
+          <a target="_blank" href="https://amzn.to/2HAuBB5" class="overlay-container" data-overlay-text="Gaming Keyboards"><img src="https://images.unsplash.com/photo-1558742569-fe6d39d05837?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Keyboards" class="overlay-img" /><p>Gaming Keyboards</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-          <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+        <div class="filter-node most_box" data-filter='["Categoryes","Computer Monitors"]'>
+          <a target="_blank" href="https://amzn.to/2L5yezE" class="overlay-container" data-overlay-text="Computer Monitors"><img src="https://images.unsplash.com/photo-1565896311009-382b9e813b19?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Computer Monitors" class="overlay-img" /><p>Computer Monitors</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
-          <a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Title" class="overlay-img" /><p>Title</p></a>
+        <div class="filter-node most_box" data-filter='["Categoryes","Gaming Headsets"]'>
+          <a target="_blank" href="https://amzn.to/2ZkYWta" class="overlay-container" data-overlay-text="Gaming Headsets"><img src="https://images.unsplash.com/photo-1560419284-6c2d2b5e0483?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Headsets" class="overlay-img" /><p>Gaming Headsets</p></a>
         </div>
 
         
