--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -15,6 +15,7 @@
         <%= f.input :gg_spare_01, label: 'Retailer' %>
         <%= f.input :gg_title, label: 'Title' %>
         <%= f.input :gg_intro, label: 'Intro' %>
+        <%= f.input :gg_option_04, label: 'Keywords' %>
         <%= f.input :gg_img, label: 'Image URL' %>
         <%= f.input :gg_url, label: 'Product URL' %>
         <%= f.input :gg_aprice, label: 'Current Price' %>
