--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,8 +48,113 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TVTLyX"><img src="https://m.media-amazon.com/images/I/61V89xXRhWL._SR400,400_.jpg" alt="SIMPLE DRINK Stainless Steel Insulated Water Bottle" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TVTLyX">SIMPLE DRINK Stainless Steel Insulated Water Bottle with BPA Free Strong Lid - Reusable Double Wall Leak Proof Metal Flask...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.98</span></address>
+      <textarea readonly="readonly" class="code_area">50ATSEY7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.98</strong> with promo code: <strong class="m_codes">50ATSEY7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TVTLyX">Use Code at Amazon</a></div>
+</div>
  
-<div class="card clearfix" data-score="30" data-price="20.29">
+<div class="card clearfix" data-score="60" data-price="12.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KRsdYH"><img src="https://m.media-amazon.com/images/I/81lOa+EYHcL._SR400,400_.jpg" alt="FAISHLAN 100W LED Flood Lights" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KRsdYH">FAISHLAN 100W LED Flood Lights, Outdoor Led Work Light, Waterproof IP66 Outdoor Flood Lights, Super Bright LED Backyard Lights ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.40</span><span class="ori_price">$30.99</span></address>
+      <textarea readonly="readonly" class="code_area">6019N83A</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $30.99</strong> with promo code: <strong class="m_codes">6019N83A</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KRsdYH">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="25.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HnkbEN"><img src="https://m.media-amazon.com/images/I/61HDPwdF6PL._SR400,400_.jpg" alt="Wireless Car Charger Mount" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HnkbEN">Wireless Car Charger Mount Auto-Clamping Car Phone Holder Wireless Charger PHYSEN QI 10W Fast Charging Car Mount ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.19</span><span class="ori_price">$35.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30459XTX</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $35.99</strong> with promo code: <strong class="m_codes">30459XTX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HnkbEN">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZiWgw9"><img src="https://m.media-amazon.com/images/I/61gQfBmNucL._SR400,400_.jpg" alt="AUKUYEE Automatic Soap Dispenser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZiWgw9">AUKUYEE Automatic Soap Dispenser, Soap Dispenser Touchless Soap Dispenser with Infrared Motion Sensor Liquid Dish...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">506SPMJJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">506SPMJJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZiWgw9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="5.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HAXFIH"><img src="https://m.media-amazon.com/images/I/71ERr4+a++L._SR400,400_.jpg" alt="Leggings" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HAXFIH">SOLY HUX Women's Yoga Soft Striped Tape Side Elastic Waist Slimming Leggings</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.99</span><span class="ori_price">$19.96</span></address>
+      <textarea readonly="readonly" class="code_area">75FXHV76</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $19.96</strong> with promo code: <strong class="m_codes">75FXHV76</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HAXFIH">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="22.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Zn6o75"><img src="https://m.media-amazon.com/images/I/51gLicZjbvL._SR400,400_.jpg" alt="USB C Hub with Type C" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Zn6o75">USB C Hub with Type C, AZDOME 9 in 1 Adapter with PD Power Delivery,4K HDMI Output, Card Reader, 3 x USB 3.0 Ports for MacBook Pro...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.00</span><span class="ori_price">$54.99</span></address>
+      <textarea readonly="readonly" class="code_area">60DFINMM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $54.99</strong> with promo code: <strong class="m_codes">60DFINMM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zn6o75">Use Code at Amazon</a></div>
+</div>
+ 
+ <div class="card clearfix" data-score="30" data-price="20.29">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Hk6l5Q"><img src="https://m.media-amazon.com/images/I/61IasMuCtoL._SR400,400_.jpg" alt="HIFUAR Women's Espadrille Sandal" /></a>
   </div>
