--- a/app/views/deals/_navbar_promotion.html.erb
+++ b/app/views/deals/_navbar_promotion.html.erb
@@ -1,6 +1,6 @@
 <div class="featured editors">
 
-  <div class="sm_pc">
+  <div class="sm_pc most_pc">
    <div class="filter-search guide_controll amzpromo">
       <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text" data-filter="coupons">Coupons</button>
@@ -11,7 +11,7 @@
     </div>
   </div>
   
-  <div class="editor_mobile">
+  <!-- <div class="editor_mobile">
     <div class="filter-search guide_controll">
       <button class="filter-button btn btn-md btn-primary all promo_btn" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text promo_btn " data-filter="coupons">Coupons</button>
@@ -27,7 +27,7 @@
       </ul>
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
-  </div>
+  </div> -->
 
 </div><!--./featured-->
 <div class="gnb_kbg"></div>
