--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -79,8 +79,8 @@
           <a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera"><img src="https://images.unsplash.com/photo-1496368077930-c1e31b4e5b44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Security Camera" class="overlay-img" /><p>Security Camera</p></a>
         </div>
 
-        <div class="filter-node most_box" data-filter='["tech","Gaming Mice"]'>
-          <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mice"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mice" class="overlay-img" /><p>Gaming Mice</p></a>
+        <div class="filter-node most_box" data-filter='["tech","Gaming Mouse"]'>
+          <a target="_blank" href="https://amzn.to/2KScLLT" class="overlay-container" data-overlay-text="Gaming Mouse"><img src="https://images.unsplash.com/photo-1553486113-1a936f2d0e9b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Gaming Mouse" class="overlay-img" /><p>Gaming Mouse</p></a>
         </div>
 
         <div class="filter-node most_box" data-filter='["tech","Gaming Keyboards"]'>
