--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -396,7 +396,7 @@
 }
 
 /* For Editors' Pick */
-.editor_mobile{display:none;}
+/*.editor_mobile{display:none;}*/
 .header_short_sub_nav{margin-top:90px;}
 .editors_pick .editors_box{float:left;width:18%;margin:0 1% 5% 1%;height:400px;}
 .editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;padding:15px;}
