--- a/app/views/deals/_navbar_mostreviwed_index.html.erb
+++ b/app/views/deals/_navbar_mostreviwed_index.html.erb
@@ -1,8 +1,8 @@
 <div class="featured editors">
 
   <!-- <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="모바일 메뉴 열기" /></button> -->
-  <div class="sm_pc">
-   <div class="filter-search guide_controll amzpromo">
+  <div class="sm_pc most_pc">
+   <div class="filter-search guide_controll amzpromo most_rev">
       <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
       <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
@@ -23,7 +23,7 @@
     </div>
   </div>
   
-  <div class="editor_mobile">
+<!--   <div class="editor_mobile">
     <div class="filter-search guide_controll">
       <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
@@ -41,7 +41,7 @@
       </ul>
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="sm_mobile">
     <div class="filter-search guide_controll amzpromo">
