--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -564,7 +564,7 @@
   .promotions .featured .sm_pc .guide_controll button{line-height:15px;font-size:15px;padding-top:8px;}
   .promotions .guide_controll{padding-left:20px;}
   .promotions .most_rev, .promotions .amzpromo{padding-left:0;}
-  .promotions .guide_controll .btn{margin:0;letter-spacing:0.5px;}
+  .promotions .guide_controll .btn{margin:0;letter-spacing:0;}
   .promotions .promotion_box{margin:10px 0 35px 0;}
   .promotions .promotion_box .inner h2 a:hover{text-decoration:none;}
   .promotions .promotion_box{float:none;width:100%;margin-bottom:35px;}
@@ -574,7 +574,7 @@
 @media screen and (min-width:641px) and (max-width:1199px){
   .promotions .featured .sm_pc .guide_controll button{float:left;width:70px;line-height:35px;}
   .promotions .featured .sm_pc .most_rev button{width:130px;}
-  .promotions .featured .sm_pc .most_rev button.reviewed{width:105px;}
+  .promotions .featured .sm_pc .most_rev button.reviewed{width:110px;}
   .promotions .featured .sm_pc .most_rev button.btn-primary{width:50px;margin-left:20px;}
   .promotions .featured .sm_pc .amzpromo button{width:130px;}
   .promotions .featured .sm_pc .amzpromo button.reviewed{width:105px;}
