--- a/app/views/deals/_navbar_most_reviewed_m.html.erb
+++ b/app/views/deals/_navbar_most_reviewed_m.html.erb
@@ -4,9 +4,11 @@
   <div class="sm_pc">
    <div class="filter-search guide_controll amzpromo">
       <button class="filter-button btn btn-md btn-primary reviewed" data-filter="*">All</button>
-      <button class="filter-button btn btn-md white-text reviewed" data-filter="30k">30,000 +</button>
-      <button class="filter-button btn btn-md reviewed" data-filter="20k">20,000 +</button>
-      <button class="filter-button btn btn-md reviewed" data-filter="10k">10,000 +</button>
+      <button class="filter-button btn btn-md white-text reviewed" data-filter="30k">50,000 +</button>
+      <button class="filter-button btn btn-md reviewed" data-filter="20k">40,000 +</button>
+      <button class="filter-button btn btn-md reviewed" data-filter="10k">30,000 +</button>
+      <button class="filter-button btn btn-md reviewed" data-filter="5k">20,000 +</button>
+      <button class="filter-button btn btn-md reviewed" data-filter="1k">10,000 +</button>
       <button class="filter-button btn btn-md reviewed" data-filter="5k">5,000 +</button>
       <button class="filter-button btn btn-md reviewed" data-filter="1k">1,000 +</button>
       <!-- <ul class="dropmenu ilter-button btn">
@@ -21,7 +23,7 @@
     </div>
   </div>
   
-  <div class="editor_mobile">
+  <!-- <div class="editor_mobile">
     <div class="filter-search guide_controll">
       <button class="filter-button btn btn-md btn-primary all" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text" data-filter="30k">30,000 +</button>
@@ -39,7 +41,7 @@
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
   </div>
-
+ -->
   <!-- <div class="sm_mobile">
     <div class="filter-search guide_controll amzpromo">
       <p>Categories</p>
