--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -462,7 +462,6 @@
 }
 
 
-
 .most_box{float:left;width:18%;margin:1%;overflow:hidden;}
 .most_box a{text-transform:uppercase;}
 .most_box a:hover p{color:rgba(0,205,0,0.7);}
@@ -483,4 +482,24 @@
   .most_review_sub{margin-top:233px;}
   .most_review_wrap{margin-top:10px;}
   .most_box{float:left;width:23%;}
+}
+
+/* PopUp Menu on most_reviewd_m Page */
+.nav_most_m{display:block;}
+.m_popup_wrap, label.most_m_label, nav.most_m_popup{position:absolute;}
+nav.most_m_popup{opacity:0;visibility:hidden;background:#505050;border-radius:4px;transition:.2s ease-out;box-shadow:0 16px 32px rgba(0, 0, 0, 0.25);-webkit-transform:translateY(-50px) scale(0.5);transform:translateY(-50px) scale(0.5);transition:.2s;position:fixed;bottom:73px;right:16px;z-index:99;}
+nav.most_m_popup a{text-decoration:none;color:#fff;display:block;padding:15px 0;text-align:center;}
+nav.most_m_popup a:hover{background:#414141;transition:0.2s ease;}
+.m_popup_wrap{height:100vh;display:flex;justify-content:center;align-items:center;bottom:0;right:50px;}
+#check{display:none;}
+#check:checked ~ nav{opacity:1;visibility:visible;-webkit-transform:translateX(0);transform:translateX(0);-webkit-transform:translateX(0) scale(1);transform:translateX(0) scale(1);transition:.2s;}
+#check:checked ~ label{-webkit-transform:scale(1.1);transform:scale(1.1);}
+label.most_m_label{position:fixed;bottom:20px;right:20px;display:block;padding:10px;background:#87c442;color:#000;font-weight:bold;text-decoration:none;font-size:1.3em;border-radius:4px;box-shadow:0px 3px 5px rgba(0, 0, 0, 0.2);transition:.2s ease;cursor:pointer;z-index:99;border:3px solid;}
+label.most_m_label:hover{background:#87c442;}
+nav.most_m_popup ul{list-style:none;margin:0;padding:0;width:150px;}
+nav.most_m_popup ul li{padding:10px;}
+
+@media screen and (max-width:640px){
+  .nav_most_pc{display:none;}
+  .nav_most_m{display:block;}
 }
